--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,5 +1,8 @@
 @import "settings";
 @import "foundation";
+@import "styles";
+
+@import url(http://fonts.googleapis.com/css?family=Varela+Round);
 
 // Or selectively include components
 // @import
