--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -59,12 +59,15 @@ h1, h2, h3, h4, h5, h5, a, li, input, p{
     	opacity: 0;
     	a{
 	    	color: $white; 
+	    	text-shadow: rgba(50,50,50,0.5) 0px 1px 1px;
 	    	@include transition(color);
 	    	&:hover{
 	    		color:$secondary-blue;
+	    		text-shadow: rgba(250,250,250,0.5) 0px 1px 1px;
 	    	}
 	    	&:active{
-	    		color:$primary-blue;
+	    		color:black;
+	    		text-shadow: rgba(250,250,250,0.5) 0px 1px 1px;
 	    	}
 	    }
 	}
@@ -104,9 +107,9 @@ h1, h2, h3, h4, h5, h5, a, li, input, p{
 	    -moz-transition: opacity 1s ease-in;
 	    -webkit-transition: opacity 1s ease-in;
 	    transition-property: bottom;
-        transition-duration: 0.5s;
+        transition-duration: .4s;
 	    -webkit-transition-property: bottom;
-        -webkit-transition-duration: 0.5s;
+        -webkit-transition-duration: .4s;
 	    transition-delay: .3s;
 		-webkit-transition-delay: .3s;
 		-moz-transition-delay: .3s;
