--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -21,19 +21,23 @@ $font: 'Varela Round', sans-serif;
 
 body{
 	background-image: url(../images/wave.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
 	-webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
 	background-color: $primary-blue;
 	font-family: $font;	
-	background-repeat: no-repeat;
 }
 h1, h2, h3, h4, h5, h5, a, li, input, p{
 	font-family: $font;
-	text-shadow: rgba(50,50,50,0.5) 0px 2px 2px;
 }
 
+#coming-soon-text{
+	position: relative; 
+	top: 300px; 
+	text-align: center;
+}
 /* HOME */
 #cards-container{
 	height: 700px;
@@ -51,14 +55,20 @@ h1, h2, h3, h4, h5, h5, a, li, input, p{
 	}
 
 }
+.letterpress{
+	color: $secondary-blue;
+	text-shadow: rgba(250,250,250,0.5) 0px 2px 2px;
+}
 #nav-container{
 	h5{
-		transition: opacity 2s ease-in;
-    	-moz-transition: opacity 2s ease-in;
-    	-webkit-transition: opacity 2s ease-in;
+		text-shadow: rgba(50,50,50,0.5) 0px 2px 2px;
+		transition: opacity 1s ease-in;
+    	-moz-transition: opacity 1s ease-in;
+    	-webkit-transition: opacity 1s ease-in;
     	opacity: 0;
     	a{
-	    	color: $white; 
+
+	    	color:$white;
 	    	text-shadow: rgba(50,50,50,0.5) 0px 1px 1px;
 	    	@include transition(color);
 	    	&:hover{
@@ -89,6 +99,7 @@ h1, h2, h3, h4, h5, h5, a, li, input, p{
 	height: 60px;
 	width: 70px;
 	background-color: rgba(21,56,96, .8);
+	border-radius: 0px 0px 4px 4px;
 	transition:width .5s ease-in;
 	-webkit-transition:width .5s ease-in;
 	}
@@ -103,9 +114,9 @@ h1, h2, h3, h4, h5, h5, a, li, input, p{
 		bottom: 70px;
 		right: 10px;
 		opacity: 0;
-	    transition: opacity 1s ease-in;
-	    -moz-transition: opacity 1s ease-in;
-	    -webkit-transition: opacity 1s ease-in;
+	    transition: opacity 2s ease-in;
+	    -moz-transition: opacity 2s ease-in;
+	    -webkit-transition: opacity 2s ease-in;
 	    transition-property: bottom;
         transition-duration: .4s;
 	    -webkit-transition-property: bottom;
@@ -118,6 +129,7 @@ h1, h2, h3, h4, h5, h5, a, li, input, p{
 	&:hover{
 		h5{
 			opacity: 1;
+
 		}
 		#logo{
 			width: 150px;
@@ -125,10 +137,107 @@ h1, h2, h3, h4, h5, h5, a, li, input, p{
 		#logo-image-text{
 			position: absolute;
 			bottom: 6px;
+			left: 55px;
 			opacity: 1;
 		}
 	}
 }
+
+
+/* DARETONOXU */
+::-webkit-input-placeholder { /* WebKit browsers */
+    color:    #999;
+    text-decoration: none;
+    box-shadow: 0px;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color:    #999;
+    text-decoration: none;
+    box-shadow: 0px;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color:    #999;
+    text-decoration: none;
+    box-shadow: 0px;
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color:    #999;
+    text-decoration: none;
+    box-shadow: 0px;
+}
+
+#login-box{
+	height: 320px;
+	background-color: $white;
+	color: $primary-blue;
+	border-bottom: 10px solid $primary-blue;
+	box-shadow: 2px 2px 10px $secondary-blue;
+	border-radius: 0px 0px 2px 2px;
+
+	textarea:focus, input:focus{
+		color: $secondary-blue;
+		font-family: $font;	
+	}
+
+	label{
+		h4{
+			color: $primary-darkgray;
+			text-shadow: rgba(250,250,250,0.5) 0px 1px 1px;
+		}
+	}
+
+	#username{
+		background-color: rgba(150,150,150, .1);
+		&:focus{
+			background-color: $white;
+		}
+	}
+	#password{
+		background-color: rgba(150,150,150, .1);
+		&:focus{
+			background-color: $white;
+		}
+	}
+
+	#login-submit{
+		margin-top: 10px;
+		margin-left: 95px;
+		background-color: $primary-blue;
+		&:hover{
+			background-color: $secondary-blue;
+		}
+	}
+}
+#whats-noxu-button{
+	margin-left: 60px;
+	margin-top: 30px;
+	background-color: $secondary-blue;
+	&:hover{
+		background-color: $primary-blue;
+	}
+}
+#login-title{
+	margin-top: 200px;
+	background-color: $primary-blue;
+	height: 50px;
+	box-shadow: 2px 2px 10px $secondary-blue;
+	border-radius: 2px 2px 0px 0px;
+
+	h3{
+		color: $white;
+		padding-top: 6px;
+		text-shadow: rgba(50,50,50,0.5) 0px 2px 2px;
+	}
+}
+#forgot-password{
+	color: $primary-gray;
+	&:hover{
+		color: $secondary-blue;
+		cursor: pointer;
+	}
+}
+
+
 
 /* EFFECTS */
 .white{
@@ -150,4 +259,68 @@ h1, h2, h3, h4, h5, h5, a, li, input, p{
       opacity: 0.5;
       }
    }
+
+@keyframes rotation {
+    from {-webkit-transform: rotate(0deg);}
+    to   {-webkit-transform: rotate(359deg);}
+}
+@-webkit-keyframes rotation {
+    from {-webkit-transform: rotate(0deg);}
+    to   {-webkit-transform: rotate(359deg);}
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 1150px) {
+	body{
+		height: 800px;
+	  	background-image: url(../images/wave.jpg);
+		background-repeat: no-repeat;
+		background-size: 150% 120%;
+		-webkit-background-size: 150% 120%;
+	    -moz-background-size: 150% 120%;
+	    -o-background-size: 150% 120%;
+	}
+}
+@media (max-width: 800px) {
+	body{
+		height: 800px;
+	  	background-image: url(../images/wave.jpg);
+		background-repeat: no-repeat;
+		background-size: 150% 100%;
+		-webkit-background-size: 150% 100%;
+	    -moz-background-size: 150% 100%;
+	    -o-background-size: 150% 100%;
+	}
+	#coming-soon-text{
+		top: 200px;
+	}
+}
+@media (max-width: 650px) {
+	body{
+		height: 600px;
+	  	background-image: url(../images/wave.jpg);
+		background-repeat: no-repeat;
+		background-size: 200% 100%;
+		-webkit-background-size: 200% 100%;
+	    -moz-background-size: 200% 100%;
+	    -o-background-size: 200% 100%;
+	}
+	#login-title{
+		margin-top: 75px;
+		height: 50px;
+	}
+	#coming-soon-text{
+		top: 200px;
+	}
+
+	#login-submit{
+		position: relative;
+		left: -30px;
+	}
+
+	#whats-noxu-button{
+		position: relative;
+		left: -95px;
+	}
+}
 
